fix: Fixed an issue that would long thread titles without whitespaces not to be wrapped properly.

--- a/app/components/routes/board/item/styles.module.css
+++ b/app/components/routes/board/item/styles.module.css
@@ -38,6 +38,7 @@
   align-items: center;
   color: var(--color-text-default);
   font-weight: bold;
+  word-wrap: anywhere;
 }
 
 .header :global(.title) > svg {
